--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Product Processing</title>
 </head>
 <body>
     <main>
-        <div id="processProducts">
+        <div class="processProducts">
+            <img src="photos/cactus-icon.png" alt="black cactus icon" class="cactus-icon">
+            <h1 class="oswald">Products to be Processed</h1>
+            <img src="photos/cactus-icon.png" alt="black cactus icon" class="cactus-icon">
             <div id="productsInput"></div>
-            <button type="button" id="productsBtn">Process your Products</button>
+
+            <img src="photos/cactus-icon.png" alt="black cactus icon" class="cactus-icon">
+            <h1 class="oswald">Processed Products</h1>
+            <img src="photos/cactus-icon.png" alt="black cactus icon" class="cactus-icon">
             <div id="productsOutput"></div>
+            <!-- <img id="sunset-photo" src="photos/sunset.jpg" alt="Arizona Desert Sunset"> -->
         </div>
     </main>
 
